Fixed layout of cast info (won't wrap to bottom of img)

--- a/Javascript/styles.css
+++ b/Javascript/styles.css
@@ -119,6 +119,11 @@ button:hover {
   color: white;
 }
 
+#castContainer {
+  width: 580px;
+  display: inline-block;
+}
+
 .castName {
   display: inline-block;
   width: 240px;
